--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "homepage": "https://github.com/sogalutira/express-gallery#readme",
   "dependencies": {
     "express": "^4.14.0",
-    "pug": "^0.1.0"
+    "pg": "^6.0.3",
+    "pg-hstore": "^2.3.2",
+    "pug": "^0.1.0",
+    "sequelize": "^3.23.6"
   }
 }
