--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "pg-hstore": "^2.3.2",
     "pug": "^0.1.0",
     "sequelize": "^3.23.6"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-sass": "^2.3.2"
   }
 }
