--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "sequelize": "^3.23.6"
   },
   "devDependencies": {
+    "faker": "^3.1.0",
     "gulp": "^3.9.1",
     "gulp-connect": "^5.0.0",
     "gulp-sass": "^2.3.2"
